Add file attribute type and fix orphaned file cleanup
This commit introduces two related improvements:

1. New File Attribute Type for Products (#488):
   - Add reusable file extension validator (Mage_Core_Model_File_Validator_Extension)
   - Add backend model for file uploads with validation and storage
   - Add frontend model for download links with XSS protection
   - Add admin form helper for file upload interface
   - Support configurable file extensions per attribute
   - Enable file dispersal for filesystem performance
   - Store files in media/catalog/files/

2. Orphaned File Cleanup:
   - Fix category images to delete old files on replacement
   - Fix product images to delete old files on replacement
   - Fix blog post images to delete old files on replacement
   - Add file deletion on entity removal for all backends
   - Prevent accumulation of unused files in media directories

All backends now properly manage file lifecycle, cleaning up old files
when replaced or when the parent entity is deleted.

--- a/app/locale/en_US/Mage_Catalog.csv
+++ b/app/locale/en_US/Mage_Catalog.csv
@@ -238,6 +238,7 @@
 "Delete Attribute Set","Delete Attribute Set"
 "Delete Category","Delete Category"
 "Delete category","Delete category"
+"Delete File","Delete File"
 "Delete Group Price","Delete Group Price"
 "Delete product","Delete product"
 "Delete Row","Delete Row"
@@ -292,6 +293,7 @@
 "Failed to copy file %s. Please, delete media with non-existing images and try again.","Failed to copy file %s. Please, delete media with non-existing images and try again."
 "Failed to move file: %s","Failed to move file: %s"
 "Field is not complete","Field is not complete"
+"File","File"
 "File options format is not valid.","File options format is not valid."
 "File upload failed","File upload failed"
 "File upload failed. Please contact the store administrator.","File upload failed. Please contact the store administrator."
